added gitignore, added a nodemon and dotenv dev packages

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "dev": "concurrently \"nodemon server/server.js\" \"NODE_ENV=development webpack serve --open\""
   },
   "author": "Alana Herlands, Eivind Del Fierro, Eric Dalio, Eric Rennie, Simran Kaur",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1"
+  }
 }
