--- a/package.json
+++ b/package.json
@@ -23,18 +23,16 @@
     "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.0",
-    "html-webpack-plugin": "^5.5.3",
     "nodemon": "^3.0.1",
     "redux-devtools-extension": "^2.13.9",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
-    "nodemon": "^3.0.1",
     "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.3"
   }
