--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Alana Herlands, Eivind Del Fierro, Eric Dalio, Eric Rennie, Simran Kaur",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -28,6 +29,8 @@
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "react-test-renderer": "^18.2.0",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.3",
+    "superagent": "^8.1.1",
+    "supertest": "^6.3.3"
   }
 }
