--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "pg": "^8.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -23,17 +24,17 @@
     "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "nodemon": "^3.0.1",
-    "redux-devtools-extension": "^2.13.9",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
     "react-test-renderer": "^18.2.0",
-    "style-loader": "^3.3.3"
+    "redux-devtools-extension": "^2.13.9",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
